Libidn NEWS -- History of user-visible changes.                 -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** doc: Improve GTK-DOC manual.

** build: Fix build errors related to doc/idn--help.texi.

* Noteworthy changes in release 1.37 (2021-05-15) [stable]

** doc: Minor fixes and codespell typos.

** Updated translations.

** Update gnulib files and build fixes.
We now use gnulib's ./bootstrap and gnulib's readme-release
infrastructure for making releases.

** API and ABI is backwards compatible with the previous version.

* Noteworthy changes in release 1.36 (2020-07-22) [stable]

** Fix unlikely memory leak in idna_to_unicode_4z4z().
Patch from Miroslav Lichvar <mlichvar@redhat.com>.

** Check codepoint validity in punycode_decode() and punycode_decode().
Reported-by: Mike Schiffman (Farsight Security, Inc.).

** tld: Add U+00EF to .nl TLD table.
Reported by Trond Haugen <trond.haugen@norid.no>.

** Indent code.

** Translation fixes.

** Update gnulib files.

** API and ABI is backwards compatible with the previous version.

* Noteworthy changes in release 1.35 (2018-05-11) [stable]

** Reflect ABI/API breakage in version 1.34
   (Stringprep_profile has a new struct member)
   Reported-by: Miroslav Lichvar

** Added new gnulib files to repository

** Fix build issues introduced in 1.34

* Noteworthy changes in release 1.34 (2018-03-31) [beta]

** libidn: Fix integer overflow in combine_hangul()
   Found by fuzzing.

** libidn: Fix integer overflow in punycode decoder
   Found by fuzzing, fix for the fix reported by Christian Weisgerber

** libidn: Fix performance issue in idna_to_unicode_internal()
   Found by fuzzing.

** libidn: Fix performance issue in stringprep functions.
   Found by fuzzing.

** libidn: Fix NULL pointer dereference in g_utf8_normalize()
   Found by fuzzing.

** libidn: Fix NULL pointer dereference in stringprep_ucs4_nfkc_normalize()
   Found by fuzzing.

** libidn: Increase performance of stringprep functions